fix overflowing issue with title animation

--- a/main.css
+++ b/main.css
@@ -222,6 +222,7 @@ li {
   width: 100%;
   text-align: center;
   z-index: 1;
+  overflow: hidden;
 }
 
 .landing-text span {
